# article-factory

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
docs/: telemetry-v1.md
src/article_factory/: __init__.py  __main__.py  app.py  cms_client.py  config.py  db.py  models.py  schemas.py
src/article_factory/control_plane/: client.py
src/article_factory/orchestrator/: flow_runner.py  pipeline.py  runner.py
src/article_factory/routes/: admin.py  auth.py  desks.py  flow_performance.py  flow_queues.py  (+6 more)
tests/: conftest.py  shift_test_helpers.py  test_active_board.py  test_admin.py  test_admin_coverage.py  test_admin_extended.py  test_api_keys.py  test_article_text.py  test_assignment_desk.py  test_auth.py  test_batch_comparison.py  test_brave_search.py  test_cli.py  test_clients.py  test_cms_connection.py  test_config.py  test_control_plane_completion.py  test_control_plane_heartbeat.py  test_coverage_97.py  test_coverage_bulk.py  test_coverage_expansion.py  test_coverage_final.py  test_coverage_finish.py  test_coverage_gaps_final.py  test_coverage_last_push.py  test_coverage_push.py  test_coverage_routes.py  test_coverage_services.py  test_db_migration.py  test_desk_topics.py  test_executor.py  test_executor_branches.py  test_executor_tools.py  test_factory_api_key_cache.py  test_factory_identity.py  test_factory_queue_depth.py  test_factory_stats.py  test_flow_performance.py  test_flow_queues.py  test_flow_roles.py  (+59 more)
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  index.css  main.tsx
(+140 files in other folders)
